src/css/styles.css
:root {
    --trunk-color: #583928;
    --branch-color: #155132;
    --leaf-color: #2d6a3e;
    --flower-color: #93d17a;
    --logo-text-color: #35231B;
    --background-color: #fff9e2;
    --main-text-color: #593c1f;
    --alt-text-color: #556B2F;
    --head-text-color: #22551C;
    --title-text-color: var(--leaf-color);
}

html {
    -webkit-text-size-adjust: 100%;

    background-image: url("../img/watermark.png");
    background-size: contain;
    resize: both;
    background-size: 320px;

}

body {
    display: flex;
    flex-direction: column;
    font-family: Arial, sans-serif;
    color: var(--main-text-color);
    max-width: 1024px;
    margin: auto;
    padding: 0 10px 0;
    @media only screen and (max-width: 600px){
        padding: 0;
    }
    @media only screen and (max-width: 1024px){
        margin: 0 10px 0;
    }
}

/* Heading styles */
h1 {
    font-size: 2em;
    color: var(--title-text-color);
}

h2 {
    font-size: 1.5em;
    color: var(--title-text-color);
}

h3 {
    font-size: 1em;
    color: var(--title-text-color);
}

a {
    color: var(--title-text-color);
}

a:visited {
    color: var(--alt-text-color);
}

/* Paragraph styles */
p {
    font-size: 1em;
    margin-bottom: 10px;
}

/* List styles */
ul {
    list-style-image: url('../img/bullet.png');
    margin-left: 20px;
    padding: 0;
}

li {
    margin-bottom: 5px;
}

address {
    font-style: normal;
}

mark {
    display: inline-block;
    padding: 0 7px 0;
    border-radius: 15px;
    margin: 0 5px 5px;
    background-color: var(--flower-color);
    color: var(--logo-text-color);
    border: white 1px solid;
    outline: var(--branch-color) 4px solid;
}

header {
    background-color: var(--background-color);
    padding: 25px 0 25px;
    color: var(--alt-text-color);
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--background-color);

    aside {
        display: inline-block;
    }

    img {
        width: 128px;
        margin: 0 20px 0 0;
    }

    h1 {
        color: var(--logo-text-color);
        margin: 0;
    }

    h2 {
        color: var(--title-text-color);
        margin: 0;
    }
}

nav {
    border-bottom: var(--branch-color) 2px solid;
    background-color: var(--background-color);
    a {
        display: inline-block;
        margin: 0 2px 0;
        border-width: 2px;
        padding: 1px 6px 1px;
        border-color: var(--branch-color);
        color: var(--logo-text-color);
        background-color: color-mix(in srgb, var(--flower-color), var(--background-color));
        border-radius: 5px;
        border-style: solid;
        text-decoration: none;
        line-height: normal;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
        position: relative;
        top: 2px;
    }
    a:visited {
        color: var(--logo-text-color);
    }
    a.disabled {
        background-color: var(--background-color);
        border-bottom-width: 0;
        padding-bottom: 3px;
    }
    a:hover {
        background-color: var(--background-color);
    }

    @media only screen and (max-width: 490px){
        a {
            margin: 0;
            font-family: 'Arial Narrow', sans-serif;
            padding: 1px 3px 1px;
        }
    }
}

main {
    height: 100%;
    flex: 1;
    margin: 0;
    background-color: var(--background-color);
    p {
            line-height: 1.6;
    }
    code {
        font-family: 'JetBrains Mono', 'Fira Code', 'Consolas', 'Monaco', monospace;
        font-size: 1.0em;
        padding: 0.2em 0.4em;
        border-radius: 4px;
    }

    pre {
        margin-top: 0;
        margin-bottom: 16px;
        padding: 16px;
        overflow: auto;
        border-radius: 6px;
        line-height: 1.45;
    }

    pre code {
        padding: 0;
        background: transparent;
        border-radius: 0;
        font-size: 1.0em;
    }

    code {
        background-color: color-mix(in srgb, white, var(--background-color));
        color: var(--alt-text-color);
    }

    pre {
        background-color: color-mix(in srgb, white, var(--background-color));
        outline: white 2px solid;
        border: var(--branch-color) 2px solid;
    }

    /* Syntax highlighting */
    pre code .keyword { color: rgb(175, 0, 175); }
    pre code .string { color: rgb(0, 128, 0); }
    pre code .number { color: rgb(0, 128, 128); }
    pre code .comment { color: rgb(128, 128, 128); font-style: italic; }
    pre code .function { color: rgb(0, 0, 175); }
    pre code .type { color: rgb(0, 100, 150); }
    pre code .variable { color: rgb(50, 50, 50); }
    pre code .operator { color: rgb(80, 80, 80); }
    pre code .punctuation { color: rgb(100, 100, 100); }

    blockquote {
        margin: 0 0 16px 0;
        padding: 0 1em;
        border-left: 4px solid;
    }

    blockquote > :first-child {
        margin-top: 0;
    }

    blockquote > :last-child {
        margin-bottom: 0;
    }
    
    blockquote {
        color: var(--alt-text-color);
        border-left-color: var(--title-text-color);
    }

}

news {
    height: 100%;
    flex: 1;
    margin: 0;
    background-color: var(--background-color);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    p {
            line-height: 1.6;
    }
    article {
        border: var(--flower-color) 2px solid;
        margin: 2px;
        padding: 2px 5px 2px;
        width: 400px;
        border-radius: 15px;
        p, h1, h2, h3 {
            margin: 0 0 6px;
        }
    }
}

footer {
    min-height: 50px;
    background-color: color-mix(in srgb, var(--background-color), transparent 50%);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    div {
        width: 250px;
    }
    h1 {
        font-size: 1em;
    }
}

